--- a/web-data-viz/site/public/dashboard/minha-carreira.html
+++ b/web-data-viz/site/public/dashboard/minha-carreira.html
@@ -2,11 +2,11 @@
 <html lang="pt-br">
 
 <head>
-    <link rel="shortcut icon" href="../assets/icon/favicon2.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/imagens/image 1.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AquaTech | Dashboards</title>
+    <title>GOAT | Minha Carreira</title>
 
     <!-- <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/dashboards.css"> -->
@@ -38,7 +38,7 @@
     <script src="https://kit.fontawesome.com/9f7414eb10.js" crossorigin="anonymous"></script>
 </head>
 
-<body onload="obterContagemPartidas(), mudarFoto(), underlineJog(), obterInfosUsuarios()">
+<body onload="obterContagemPartidas(), mudarFoto(), obterInfosUsuarios()">
     <div class="gridContainer">
 
         <!-- Header -->
